Added missing routes, fixed bugs and doc
